<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Product"
    android:orientation="vertical"
    android:background="@color/blue1">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
        <ImageView
            android:id="@+id/product_btn_back"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@drawable/baseline_arrow_back_24"
            android:clickable="true"
            android:focusable="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OUR PRODUCT"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/blue3"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:padding="20dp"/>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="WHAT DOES OUR PRODUCT CONSIST OF?"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:contentPadding="16dp"
                    app:cardElevation="2dp"
                    app:cardCornerRadius="20dp"
                    android:layout_gravity="center">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="ESP32"
                            android:textStyle="bold"
                            android:textSize="10sp"
                            android:textColor="@color/blue3"
                            android:paddingVertical="10dp"/>
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:src="@color/blue1"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:paddingTop="10dp"
                            android:gravity="center_vertical">
                            <ImageView
                                android:layout_width="150dp"
                                android:layout_height="100dp"
                                android:src="@drawable/esp"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/esp32"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                android:textColor="@color/blue3"
                                android:justificationMode="inter_word" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:contentPadding="16dp"
                    app:cardElevation="2dp"
                    app:cardCornerRadius="20dp"
                    android:layout_gravity="center">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="DHT-11"
                            android:textStyle="bold"
                            android:textSize="10sp"
                            android:textColor="@color/blue3"
                            android:paddingVertical="10dp"/>
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:src="@color/blue1"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:gravity="center_vertical"
                            android:paddingTop="10dp">
                            <ImageView
                                android:layout_width="150dp"
                                android:layout_height="100dp"
                                android:src="@drawable/dht11"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/dht11"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                android:textColor="@color/blue3"
                                android:justificationMode="inter_word"
                                android:gravity="center_vertical"/>
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:contentPadding="16dp"
                    app:cardElevation="2dp"
                    app:cardCornerRadius="20dp"
                    android:layout_gravity="center">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="LDR"
                            android:textStyle="bold"
                            android:textSize="10sp"
                            android:textColor="@color/blue3"
                            android:paddingVertical="10dp"/>
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:src="@color/blue1"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:gravity="center_vertical"
                            android:paddingTop="10dp">
                            <ImageView
                                android:layout_width="150dp"
                                android:layout_height="100dp"
                                android:src="@drawable/ldr"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/ldr"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                android:textColor="@color/blue3"
                                android:justificationMode="inter_word"
                                android:gravity="center_vertical"/>
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:contentPadding="16dp"
                    app:cardElevation="2dp"
                    app:cardCornerRadius="20dp"
                    android:layout_gravity="center">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Dust-Sensor"
                            android:textStyle="bold"
                            android:textSize="10sp"
                            android:textColor="@color/blue3"
                            android:paddingVertical="10dp"/>
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:src="@color/blue1"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:gravity="center_vertical"
                            android:paddingTop="10dp">
                            <ImageView
                                android:layout_width="150dp"
                                android:layout_height="100dp"
                                android:src="@drawable/dust"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/dust"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                android:textColor="@color/blue3"
                                android:justificationMode="inter_word"
                                android:gravity="center_vertical"/>
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:paddingBottom="10dp">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:contentPadding="16dp"
                    app:cardElevation="2dp"
                    app:cardCornerRadius="20dp"
                    android:layout_gravity="center">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Gas Metana-Sensor"
                            android:textStyle="bold"
                            android:textSize="10sp"
                            android:textColor="@color/blue3"
                            android:paddingVertical="10dp"/>
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:src="@color/blue1"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:gravity="center_vertical"
                            android:paddingTop="10dp">
                            <ImageView
                                android:layout_width="150dp"
                                android:layout_height="100dp"
                                android:src="@drawable/methane"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/methane"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                android:textColor="@color/blue3"
                                android:justificationMode="inter_word"
                                android:gravity="center_vertical"/>
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>